// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vba parser parse comment and line continuation correctly 2`] = `
"{
  'start': 0,
  'end': 57,
  'firstLine': 1,
  'lastLine': 12,
  'firstColumn': 1,
  'lastColumn': 1,
  'symbol': 'progam',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 2,
      'firstColumn': 1,
      'lastColumn': 1,
      'symbol': 'endOfLine',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 2,
          'firstColumn': 1,
          'lastColumn': 1,
          'token': 'NEWLINE',
          'type': 'token',
          'text': '\\\\n'
        }
      ],
      'ruleIndex': 2
    },
    {
      'start': 1,
      'end': 57,
      'firstLine': 2,
      'lastLine': 12,
      'firstColumn': 1,
      'lastColumn': 1,
      'symbol': 'moduleBody',
      'type': 'symbol',
      'children': [
        {
          'start': 1,
          'end': 56,
          'firstLine': 2,
          'lastLine': 11,
          'firstColumn': 1,
          'lastColumn': 8,
          'symbol': 'moduleBodyElement',
          'type': 'symbol',
          'children': [
            {
              'start': 1,
              'end': 56,
              'firstLine': 2,
              'lastLine': 11,
              'firstColumn': 1,
              'lastColumn': 8,
              'symbol': 'subStmt',
              'type': 'symbol',
              'children': [
                {
                  'start': 1,
                  'end': 4,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 1,
                  'lastColumn': 4,
                  'token': 'SUB',
                  'type': 'token',
                  'text': 'sub'
                },
                {
                  'start': 5,
                  'end': 9,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 5,
                  'lastColumn': 9,
                  'token': 'IDENTIFIER',
                  'type': 'token',
                  'text': 'main'
                },
                {
                  'start': 9,
                  'end': 40,
                  'firstLine': 2,
                  'lastLine': 8,
                  'firstColumn': 9,
                  'lastColumn': 1,
                  'symbol': 'endOfStatement',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 9,
                      'end': 10,
                      'firstLine': 2,
                      'lastLine': 3,
                      'firstColumn': 9,
                      'lastColumn': 1,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 9,
                          'end': 10,
                          'firstLine': 2,
                          'lastLine': 3,
                          'firstColumn': 9,
                          'lastColumn': 1,
                          'token': 'NEWLINE',
                          'type': 'token',
                          'text': '\\\\n'
                        }
                      ],
                      'ruleIndex': 2
                    },
                    {
                      'start': 10,
                      'end': 23,
                      'firstLine': 3,
                      'lastLine': 4,
                      'firstColumn': 1,
                      'lastColumn': 8,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 10,
                          'end': 23,
                          'firstLine': 3,
                          'lastLine': 4,
                          'firstColumn': 1,
                          'lastColumn': 8,
                          'token': 'COMMENT',
                          'type': 'token',
                          'text': '' x _\\\\nsdfasdf'
                        }
                      ],
                      'ruleIndex': 2
                    },
                    {
                      'start': 23,
                      'end': 24,
                      'firstLine': 4,
                      'lastLine': 5,
                      'firstColumn': 8,
                      'lastColumn': 1,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 23,
                          'end': 24,
                          'firstLine': 4,
                          'lastLine': 5,
                          'firstColumn': 8,
                          'lastColumn': 1,
                          'token': 'NEWLINE',
                          'type': 'token',
                          'text': '\\\\n'
                        }
                      ],
                      'ruleIndex': 2
                    },
                    {
                      'start': 24,
                      'end': 38,
                      'firstLine': 5,
                      'lastLine': 6,
                      'firstColumn': 1,
                      'lastColumn': 4,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 24,
                          'end': 38,
                          'firstLine': 5,
                          'lastLine': 6,
                          'firstColumn': 1,
                          'lastColumn': 4,
                          'token': 'REMCOMMENT',
                          'type': 'token',
                          'text': 'rem xxxx _\\\\nyyy'
                        }
                      ],
                      'ruleIndex': 2
                    },
                    {
                      'start': 38,
                      'end': 40,
                      'firstLine': 6,
                      'lastLine': 8,
                      'firstColumn': 4,
                      'lastColumn': 1,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 38,
                          'end': 40,
                          'firstLine': 6,
                          'lastLine': 8,
                          'firstColumn': 4,
                          'lastColumn': 1,
                          'token': 'NEWLINE',
                          'type': 'token',
                          'text': '\\\\n\\\\n'
                        }
                      ],
                      'ruleIndex': 2
                    }
                  ],
                  'ruleIndex': 3
                },
                {
                  'start': 40,
                  'end': 49,
                  'firstLine': 8,
                  'lastLine': 11,
                  'firstColumn': 1,
                  'lastColumn': 1,
                  'symbol': 'block',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 40,
                      'end': 47,
                      'firstLine': 8,
                      'lastLine': 9,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'symbol': 'blockStmt',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 40,
                          'end': 47,
                          'firstLine': 8,
                          'lastLine': 9,
                          'firstColumn': 1,
                          'lastColumn': 2,
                          'symbol': 'letStmt',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 40,
                              'end': 41,
                              'firstLine': 8,
                              'lastLine': 8,
                              'firstColumn': 1,
                              'lastColumn': 2,
                              'symbol': 'implicitCallStmt_InStmt',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 40,
                                  'end': 41,
                                  'firstLine': 8,
                                  'lastLine': 8,
                                  'firstColumn': 1,
                                  'lastColumn': 2,
                                  'symbol': 'iCS_S_VariableOrProcedureCall',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 40,
                                      'end': 41,
                                      'firstLine': 8,
                                      'lastLine': 8,
                                      'firstColumn': 1,
                                      'lastColumn': 2,
                                      'token': 'IDENTIFIER',
                                      'type': 'token',
                                      'text': 'x'
                                    }
                                  ],
                                  'ruleIndex': 39
                                }
                              ],
                              'ruleIndex': 35
                            },
                            {
                              'start': 42,
                              'end': 43,
                              'firstLine': 8,
                              'lastLine': 8,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'token': 'EQ',
                              'type': 'token',
                              'text': '='
                            },
                            {
                              'start': 46,
                              'end': 47,
                              'firstLine': 9,
                              'lastLine': 9,
                              'firstColumn': 1,
                              'lastColumn': 2,
                              'symbol': 'valueStmt',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 46,
                                  'end': 47,
                                  'firstLine': 9,
                                  'lastLine': 9,
                                  'firstColumn': 1,
                                  'lastColumn': 2,
                                  'symbol': 'literal',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 46,
                                      'end': 47,
                                      'firstLine': 9,
                                      'lastLine': 9,
                                      'firstColumn': 1,
                                      'lastColumn': 2,
                                      'token': 'INTEGERLITERAL',
                                      'type': 'token',
                                      'text': '1'
                                    }
                                  ],
                                  'ruleIndex': 41
                                }
                              ],
                              'ruleIndex': 34
                            }
                          ],
                          'ruleIndex': 17
                        }
                      ],
                      'ruleIndex': 12
                    },
                    {
                      'start': 47,
                      'end': 49,
                      'firstLine': 9,
                      'lastLine': 11,
                      'firstColumn': 2,
                      'lastColumn': 1,
                      'symbol': 'endOfStatement',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 47,
                          'end': 49,
                          'firstLine': 9,
                          'lastLine': 11,
                          'firstColumn': 2,
                          'lastColumn': 1,
                          'symbol': 'endOfLine',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 47,
                              'end': 49,
                              'firstLine': 9,
                              'lastLine': 11,
                              'firstColumn': 2,
                              'lastColumn': 1,
                              'token': 'NEWLINE',
                              'type': 'token',
                              'text': '\\\\n\\\\n'
                            }
                          ],
                          'ruleIndex': 2
                        }
                      ],
                      'ruleIndex': 3
                    }
                  ],
                  'ruleIndex': 11
                },
                {
                  'start': 49,
                  'end': 56,
                  'firstLine': 11,
                  'lastLine': 11,
                  'firstColumn': 1,
                  'lastColumn': 8,
                  'token': 'END_SUB',
                  'type': 'token',
                  'text': 'end sub'
                }
              ],
              'ruleIndex': 9
            }
          ],
          'ruleIndex': 7
        },
        {
          'start': 56,
          'end': 57,
          'firstLine': 11,
          'lastLine': 12,
          'firstColumn': 8,
          'lastColumn': 1,
          'symbol': 'endOfLine',
          'type': 'symbol',
          'children': [
            {
              'start': 56,
              'end': 57,
              'firstLine': 11,
              'lastLine': 12,
              'firstColumn': 8,
              'lastColumn': 1,
              'token': 'NEWLINE',
              'type': 'token',
              'text': '\\\\n'
            }
          ],
          'ruleIndex': 2
        }
      ],
      'ruleIndex': 6
    }
  ],
  'ruleIndex': 1
}"
`;

exports[`vba parser parse correctly 2`] = `
"{
  'start': 0,
  'end': 27,
  'firstLine': 1,
  'lastLine': 5,
  'firstColumn': 1,
  'lastColumn': 1,
  'symbol': 'progam',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 2,
      'firstColumn': 1,
      'lastColumn': 1,
      'symbol': 'endOfLine',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 2,
          'firstColumn': 1,
          'lastColumn': 1,
          'token': 'NEWLINE',
          'type': 'token',
          'text': '\\\\n'
        }
      ],
      'ruleIndex': 2
    },
    {
      'start': 1,
      'end': 27,
      'firstLine': 2,
      'lastLine': 5,
      'firstColumn': 1,
      'lastColumn': 1,
      'symbol': 'moduleBody',
      'type': 'symbol',
      'children': [
        {
          'start': 1,
          'end': 26,
          'firstLine': 2,
          'lastLine': 4,
          'firstColumn': 1,
          'lastColumn': 8,
          'symbol': 'moduleBodyElement',
          'type': 'symbol',
          'children': [
            {
              'start': 1,
              'end': 26,
              'firstLine': 2,
              'lastLine': 4,
              'firstColumn': 1,
              'lastColumn': 8,
              'symbol': 'subStmt',
              'type': 'symbol',
              'children': [
                {
                  'start': 1,
                  'end': 4,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 1,
                  'lastColumn': 4,
                  'token': 'SUB',
                  'type': 'token',
                  'text': 'sub'
                },
                {
                  'start': 5,
                  'end': 9,
                  'firstLine': 2,
                  'lastLine': 2,
                  'firstColumn': 5,
                  'lastColumn': 9,
                  'token': 'IDENTIFIER',
                  'type': 'token',
                  'text': 'main'
                },
                {
                  'start': 9,
                  'end': 10,
                  'firstLine': 2,
                  'lastLine': 3,
                  'firstColumn': 9,
                  'lastColumn': 1,
                  'symbol': 'endOfStatement',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 9,
                      'end': 10,
                      'firstLine': 2,
                      'lastLine': 3,
                      'firstColumn': 9,
                      'lastColumn': 1,
                      'symbol': 'endOfLine',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 9,
                          'end': 10,
                          'firstLine': 2,
                          'lastLine': 3,
                          'firstColumn': 9,
                          'lastColumn': 1,
                          'token': 'NEWLINE',
                          'type': 'token',
                          'text': '\\\\n'
                        }
                      ],
                      'ruleIndex': 2
                    }
                  ],
                  'ruleIndex': 3
                },
                {
                  'start': 10,
                  'end': 19,
                  'firstLine': 3,
                  'lastLine': 4,
                  'firstColumn': 1,
                  'lastColumn': 1,
                  'symbol': 'block',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 10,
                      'end': 18,
                      'firstLine': 3,
                      'lastLine': 3,
                      'firstColumn': 1,
                      'lastColumn': 9,
                      'symbol': 'blockStmt',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 10,
                          'end': 18,
                          'firstLine': 3,
                          'lastLine': 3,
                          'firstColumn': 1,
                          'lastColumn': 9,
                          'symbol': 'implicitCallStmt_InBlock',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 10,
                              'end': 18,
                              'firstLine': 3,
                              'lastLine': 3,
                              'firstColumn': 1,
                              'lastColumn': 9,
                              'symbol': 'iCS_B_ProcedureCall',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 10,
                                  'end': 16,
                                  'firstLine': 3,
                                  'lastLine': 3,
                                  'firstColumn': 1,
                                  'lastColumn': 7,
                                  'token': 'IDENTIFIER',
                                  'type': 'token',
                                  'text': 'msgbox'
                                },
                                {
                                  'start': 17,
                                  'end': 18,
                                  'firstLine': 3,
                                  'lastLine': 3,
                                  'firstColumn': 8,
                                  'lastColumn': 9,
                                  'symbol': 'argsCall',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 17,
                                      'end': 18,
                                      'firstLine': 3,
                                      'lastLine': 3,
                                      'firstColumn': 8,
                                      'lastColumn': 9,
                                      'symbol': 'argCall',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 17,
                                          'end': 18,
                                          'firstLine': 3,
                                          'lastLine': 3,
                                          'firstColumn': 8,
                                          'lastColumn': 9,
                                          'symbol': 'valueStmt',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 17,
                                              'end': 18,
                                              'firstLine': 3,
                                              'lastLine': 3,
                                              'firstColumn': 8,
                                              'lastColumn': 9,
                                              'symbol': 'literal',
                                              'type': 'symbol',
                                              'children': [
                                                {
                                                  'start': 17,
                                                  'end': 18,
                                                  'firstLine': 3,
                                                  'lastLine': 3,
                                                  'firstColumn': 8,
                                                  'lastColumn': 9,
                                                  'token': 'INTEGERLITERAL',
                                                  'type': 'token',
                                                  'text': '1'
                                                }
                                              ],
                                              'ruleIndex': 41
                                            }
                                          ],
                                          'ruleIndex': 34
                                        }
                                      ],
                                      'ruleIndex': 26
                                    }
                                  ],
                                  'ruleIndex': 25
                                }
                              ],
                              'ruleIndex': 24
                            }
                          ],
                          'ruleIndex': 22
                        }
                      ],
                      'ruleIndex': 12
                    },
                    {
                      'start': 18,
                      'end': 19,
                      'firstLine': 3,
                      'lastLine': 4,
                      'firstColumn': 9,
                      'lastColumn': 1,
                      'symbol': 'endOfStatement',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 18,
                          'end': 19,
                          'firstLine': 3,
                          'lastLine': 4,
                          'firstColumn': 9,
                          'lastColumn': 1,
                          'symbol': 'endOfLine',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 18,
                              'end': 19,
                              'firstLine': 3,
                              'lastLine': 4,
                              'firstColumn': 9,
                              'lastColumn': 1,
                              'token': 'NEWLINE',
                              'type': 'token',
                              'text': '\\\\n'
                            }
                          ],
                          'ruleIndex': 2
                        }
                      ],
                      'ruleIndex': 3
                    }
                  ],
                  'ruleIndex': 11
                },
                {
                  'start': 19,
                  'end': 26,
                  'firstLine': 4,
                  'lastLine': 4,
                  'firstColumn': 1,
                  'lastColumn': 8,
                  'token': 'END_SUB',
                  'type': 'token',
                  'text': 'end sub'
                }
              ],
              'ruleIndex': 9
            }
          ],
          'ruleIndex': 7
        },
        {
          'start': 26,
          'end': 27,
          'firstLine': 4,
          'lastLine': 5,
          'firstColumn': 8,
          'lastColumn': 1,
          'symbol': 'endOfLine',
          'type': 'symbol',
          'children': [
            {
              'start': 26,
              'end': 27,
              'firstLine': 4,
              'lastLine': 5,
              'firstColumn': 8,
              'lastColumn': 1,
              'token': 'NEWLINE',
              'type': 'token',
              'text': '\\\\n'
            }
          ],
          'ruleIndex': 2
        }
      ],
      'ruleIndex': 6
    }
  ],
  'ruleIndex': 1
}"
`;
